:art:def_process_re_expresstion

--- a/noun_similarity.ipynb
+++ b/noun_similarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {
     "scrolled": false
    },
@@ -44,40 +44,7 @@
       "./data_files/43029_ruby_23223.zip is download\n",
       "./data_files/43029_ruby_23223.zip is download\n",
       "./data_files/43029_ruby_23223.zip is download\n",
-      "True\n",
-      "./data_files/kyoto_gakkono_ki.txt\n",
-      "./data_files/butsurigakuno_yoyo.txt\n",
-      "./data_files/kyoikuno_mokuteki.txt\n",
-      "./data_files/nakatsuryubetsuno_sho.txt\n",
-      "./data_files/03shokan.txt\n",
-      "./data_files/02yasegamanno_setsu.txt\n",
-      "./data_files/gakusha_anshin_ron.txt\n",
-      "./data_files/bunmei_kyoikuron.txt\n",
-      "./data_files/keiseino_gaku.txt\n",
-      "./data_files/kateishukanno_oshieo_ronzu.txt\n",
-      "./data_files/doku_rinrikyokasho.txt\n",
-      "./data_files/jinseino_rakuji.txt\n",
-      "./data_files/nihon_danshi_ron.txt\n",
-      "./data_files/keiogijukuno_ki.txt\n",
-      "./data_files/kyoikuno_koto.txt\n",
-      "./data_files/gakumonno_susume.txt\n",
-      "./data_files/onna_daigaku_hyoron.txt\n",
-      "./data_files/gakkono_setsu.txt\n",
-      "./data_files/kyuhanjo.txt\n",
-      "./data_files/yojono_kokoroe.txt\n",
-      "./data_files/shogaku_kyoikuno_koto.txt\n",
-      "./data_files/seigaku_sokushin_jitsugyo.txt\n",
-      "./data_files/chugeniwaizakeno_ki.txt\n",
-      "./data_files/meiji_sanjyuichinen.txt\n",
-      "./data_files/keiogijuku_shingi.txt\n",
-      "./data_files/seijito_kyoikuto_bunri.txt\n",
-      "./data_files/america_dokuritsu_sengen.txt\n",
-      "./data_files/shin_onnadaigaku.txt\n",
-      "./data_files/gakumonno_dokuritsu.txt\n",
-      "./data_files/nikujikino_setsu.txt\n",
-      "./data_files/tokuiku_ikan.txt\n",
-      "./data_files/shushin_yoryo.txt\n",
-      "./data_files/keiogijuku_gakuseishoshini.txt\n"
+      "True\n"
      ]
     }
    ],
@@ -132,80 +99,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kyoto_gakkono_ki.txt\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'kyoto_gakkono_ki.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-0f715ba73868>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtxt_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcodecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"sjis\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/3.6.5/lib/python3.6/codecs.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(filename, mode, encoding, errors, buffering)\u001b[0m\n\u001b[1;32m    895\u001b[0m         \u001b[0;31m# Force opening of the file in binary mode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    896\u001b[0m         \u001b[0mmode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'b'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 897\u001b[0;31m     \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuffering\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    898\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mencoding\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    899\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'kyoto_gakkono_ki.txt'"
+      "明治五年申五月朔日、社友早矢仕氏とともに京都にいたり、名所旧跡はもとよりこれを訪うに暇あらず、博覧会の見物ももと余輩上京の趣意にあらず、まず府下の学校を一覧せんとて、知る人に案内を乞い、諸処の学校に行\n",
+      "\n",
+      "\n",
+      "\n",
+      "難きほどのものなれば、貧富ともに勉むべきは学問にして、ただその教場をして仙境ならしめざること、吾々のつねに注意して怠らざるところなれば、学生諸氏もおのおの自から心してこの注意を空しゅうせしむるなかれ。\n"
      ]
     }
    ],
    "source": [
+    "# 正規表現処理を関数化\n",
+    "# mapped_txt_listはgenerateで構成されているため一度使うと消える\n",
+    "\n",
     "import codecs\n",
+    "import re\n",
     "\n",
-    "# 処理済みテキストの格納\n",
-    "all_sjis_text = \"\"\n",
-    "\n",
-    "# ファイル読込み、内部表現化\n",
-    "for text in txt_list:\n",
-    "    print(text)\n",
-    "    f = codecs.open(text, \"r\", \"sjis\")\n",
-    "    print(f)\n",
-    "    \n",
-    "    sjis_text = f.read()\n",
-    "    f.close()\n",
-    "\n",
-    "    # ファイル整形\n",
-    "    import re\n",
+    "def processing_regular_expression(text):\n",
     "    # ヘッダ部分の除去\n",
-    "    sjis_text = re.split('-{5,}',sjis_text)[2]\n",
+    "    text = re.split('-{5,}', text)[2]\n",
     "    # フッタ部分の除去\n",
-    "    sjis_text = re.split('底本：',sjis_text)[0]\n",
-    "    # | の除去\n",
-    "    sjis_text = sjis_text.replace('|', '')\n",
-    "    # ルビの削除\n",
-    "    sjis_text = re.sub('《.+?》', '', sjis_text)\n",
-    "    # 入力注の削除\n",
-    "    sjis_text = re.sub('［＃.+?］', '',sjis_text)\n",
-    "    # 空行の削除\n",
-    "    sjis_text = re.sub('\\n\\n', '\\n', sjis_text)\n",
-    "    sjis_text = re.sub('\\u3000', '',sjis_text)\n",
-    "    # carrige returnの削除\n",
-    "    sjis_text = re.sub('\\r', '', sjis_text)\n",
-    "    #  line feed の削除\n",
-    "    sjis_text = re.sub('\\n', '',sjis_text)\n",
-    "    \n",
+    "    text = re.split('底本：', text)[0]\n",
+    "    # |の除去\n",
+    "    text = text.replace('｜', '')\n",
+    "    text = text.replace('|', '')\n",
+    "    # ルビの除去\n",
+    "    text = re.sub('《.+?》', '', text)\n",
+    "    # 入力注の除去\n",
+    "    text = re.sub('［＃.+?］', '', text)\n",
+    "    # 空行の除去\n",
+    "    text = re.sub('\\n\\n', '\\n', text)\n",
+    "    text = re.sub('\\u3000', '', text)\n",
+    "    # CR,LFの除去\n",
+    "    text = re.sub('\\r', '', text)\n",
+    "    text = re.sub('\\n', '', text)\n",
+    "    return text\n",
     "\n",
-    "    # 整形結果確認\n",
-    "#     print(sjis_text[:200])\n",
-    "    # 見やすくするため、空行 \n",
-    "#     print('\\n\\n')\n",
-    "    # 後ろの100文字の表示 \n",
-    "#     print(sjis_text[-200:])\n",
-    "    \n",
-    "    #テキストに保存\n",
-    "    all_sjis_text += sjis_text\n",
-    "print(all_sjis_text)"
+    "if __name__ == '__main__':\n",
+    "    all_sjis_text = \"\" # 処理済みテキストの格納\n",
+    "\n",
+    "    # ファイル読込み、内部表現化\n",
+    "    for text in mapped_txt_list:\n",
+    "        f = codecs.open(text, \"r\", \"sjis\")\n",
+    "        sjis_text = f.read()\n",
+    "        f.close()    \n",
+    "        sjis_text = processing_regular_expression(sjis_text)\n",
+    "        all_sjis_text += sjis_text #テキストに保存\n",
+    "        \n",
+    "    # 整形結果確認   \n",
+    "    print(all_sjis_text[:100])\n",
+    "    print('\\n\\n')\n",
+    "    print(all_sjis_text[-100:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -250,38 +205,37 @@
     }
    ],
    "source": [
+    "# mainは少なくする\n",
     "from janome.tokenizer import Tokenizer\n",
     "\n",
     "# Tokenneizerインスタンスの生成 \n",
     "t = Tokenizer()\n",
     "\n",
     "# テキストを引数として、形態素解析の結果、名詞のみの配列で抽出する関数を定義 \n",
-    "def extract_words(sjis_text):\n",
-    "    tokens = t.tokenize(sjis_text)\n",
+    "def extract_words(text):\n",
+    "    tokens = t.tokenize(text)\n",
     "    return [token.surface for token in tokens if  token.part_of_speech.split(',')[0] in ['名詞']]\n",
     "\n",
-    "#  関数テスト\n",
-    "# ret = extract_words('明治五年｜申五月｜朔日、社友｜早矢仕氏とともに京都にいたり、名所旧跡はもとよりこれを訪うに暇あらず、博覧会の見物ももと余輩上京の趣意にあらず、まず府下の学校を一覧せんとて、知る人に案内を乞い、諸処の学校に行きしに、その待遇きわめて厚く、塾舎・講堂、残るところなく見るを得たり。')\n",
-    "# for word in ret:\n",
-    "#     print(word)\n",
+    "if __name__ == '__main__':\n",
+    "    # 全体のテキストを句点で区切った配列にする。\n",
+    "    sentence_list = all_sjis_text.split('。')\n",
     "\n",
-    "# 全体のテキストを句点で区切った配列にする。\n",
-    "sentence_list = all_sjis_text.split('。')\n",
+    "    # それぞれの文章を単語リストに変換\n",
+    "    word_list = [extract_words(sentence)for sentence in sentence_list]\n",
     "\n",
-    "# それぞれの文章を単語リストに変換\n",
-    "word_list = [extract_words(sentence)for sentence in sentence_list]\n",
-    "    \n",
-    "# 単語リストの結果を一部表示\n",
-    "for word in word_list[0]:\n",
-    "    print(word)\n"
+    "    # 単語リストの結果を一部表示\n",
+    "    for word in word_list[0]:\n",
+    "        print(word)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#word2vecの使い方を調べる\n",
+    "#適切なハイパーパラメータを決める\n",
     "from gensim.models import word2vec\n",
     "\n",
     "# size: 圧縮次元数\n",
@@ -293,39 +247,49 @@
     "# その場合、iterの値を大きくして、再度学習を行います。\n",
     "\n",
     "# 事前準備したword_listを使ってWord2Vecの学習実施\n",
-    "model = word2vec.Word2Vec(word_list, size=100,min_count=5,window=5,iter=100)"
+    "model = word2vec.Word2Vec(word_list, size=100, alpha=0.01, window=5, min_count=3, iter=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.37224346 -0.8927241  -0.48001295 -1.7234765   2.6264646  -2.1272457\n",
-      "  0.2847044   0.7753684   0.13785578 -1.6422555   0.22328389 -1.4586166\n",
-      " -0.3154943   0.05757952 -1.5670145   1.7751298  -1.3134022  -2.4336133\n",
-      " -0.11664536  0.09272543  0.1047623  -0.34785834  2.281147   -0.70943296\n",
-      " -0.35234544 -0.29986173  1.1909989   0.9662525  -0.23316458 -1.946647\n",
-      "  0.5881884   0.73663265  0.87169886  2.0406816   0.2370829   0.6062448\n",
-      " -1.7646132   0.5496129  -0.75191754  1.0534582  -1.0870793  -1.7766922\n",
-      "  2.7578037   0.14994285  0.10068615  0.2889882  -0.6134185  -1.5999016\n",
-      "  1.9930787  -0.91996723  0.89026296 -0.46296346  0.67923206  1.4639814\n",
-      " -0.95738447  0.3699064   1.1375983   0.0223671   0.07891569  0.07816242\n",
-      " -1.0634359   3.7946665  -1.3917263   0.56965953 -0.93708766  0.1292948\n",
-      " -0.45156002  0.54583174  0.845524    0.8359749   0.15579444  1.0860866\n",
-      "  2.8373322   3.1709573   1.528081   -3.9184134  -2.8767745  -1.0665125\n",
-      " -1.3443097  -1.479317   -0.5277039   0.29506394 -2.4047484  -0.9064398\n",
-      "  0.5813547   1.6208626   0.45392466 -1.4246342   3.162173   -1.288326\n",
-      "  1.9775153   0.3837838   0.50291646 -0.6945643  -1.875601   -1.4812309\n",
-      "  1.1063765   0.36948854 -1.308879   -0.6601203 ]\n"
+      "[ 1.97601598e-02  3.63006443e-03 -7.41567016e-02 -5.55482768e-02\n",
+      "  5.32528246e-03 -4.51689325e-02  4.87040030e-03 -1.04562258e-02\n",
+      "  8.87917057e-02  6.83920234e-02  1.50601760e-01  9.03183408e-03\n",
+      "  1.40525103e-01 -3.51149999e-02  7.06507340e-02  7.66725242e-02\n",
+      " -6.78969920e-02 -8.79880339e-02  1.98746398e-02 -5.22150695e-02\n",
+      "  5.70226088e-02  1.20128412e-02  3.49547938e-02  4.12294157e-02\n",
+      " -1.40134394e-02 -7.62532428e-02 -1.19028147e-02  8.68743435e-02\n",
+      " -9.69357640e-02  1.36763668e-02 -4.21256162e-02 -3.80258225e-02\n",
+      "  6.91056103e-02  7.86385462e-02 -6.39136285e-02 -5.63166961e-02\n",
+      "  1.50873914e-01 -1.45532086e-01 -2.03896984e-02  1.37454227e-01\n",
+      "  1.63418353e-01  8.59540701e-02  2.25330871e-02 -3.82669299e-04\n",
+      "  3.29813361e-02 -8.64155591e-02  4.30007419e-03 -3.43955569e-02\n",
+      "  2.91459430e-02 -4.46299836e-02  3.20232734e-02  1.03695415e-01\n",
+      "  5.77519939e-04 -3.41199711e-02  1.38481655e-05 -2.09218338e-02\n",
+      "  9.49757099e-02 -5.86823747e-02 -6.14457158e-03  4.02374007e-02\n",
+      " -1.64970122e-02  4.68434095e-02  4.25373465e-02  7.76763260e-02\n",
+      "  9.24499147e-03 -6.33860230e-02  1.90545265e-02 -7.16215791e-03\n",
+      "  6.36342391e-02 -8.82785302e-03  5.99658815e-04 -1.78095493e-02\n",
+      " -4.38056840e-03  7.92853013e-02  4.80236486e-02 -8.56995210e-02\n",
+      " -6.20109364e-02  1.08906046e-01 -5.24763856e-03  5.77786006e-02\n",
+      " -2.64405040e-03 -5.11050373e-02  2.03844961e-02 -6.11797795e-02\n",
+      " -8.07085484e-02  1.07581973e-01 -1.91608742e-02 -7.53367543e-02\n",
+      " -1.07878435e-03 -5.90029918e-02 -1.38627866e-03  4.29110974e-02\n",
+      "  8.40430111e-02 -4.77543883e-02  6.00388795e-02 -4.31590490e-02\n",
+      "  1.41054969e-02  7.02049658e-02 -1.96175650e-03 -1.01143848e-02]\n"
      ]
     }
    ],
    "source": [
+    "#他にも適切な確認方法がないか調べる\n",
+    "\n",
     "# 結果の確認1\n",
     "# 一つ一つの単語は100次元のベクトルになっています。 \n",
     "# 「世間」のベクトル値を確認します。\n",
@@ -365,6 +329,8 @@
     }
    ],
    "source": [
+    "#下に出てくる警告を調べできれば表示させないようにする\n",
+    "\n",
     "# 結果の確認2\n",
     "# 関数most_similarを使って「世間」の類似単語を調べます \n",
     "ret = model.wv.most_similar(positive=['命']) \n",
