--- a/noun_similarity.ipynb
+++ b/noun_similarity.ipynb
@@ -129,7 +129,7 @@
     "import codecs\n",
     "import re\n",
     "\n",
-    "def processing_regular_expression(text):\n",
+    "def normalize_text(text):\n",
     "    # ヘッダ部分の除去\n",
     "    text = re.split('-{5,}', text)[2]\n",
     "    # フッタ部分の除去\n",
@@ -157,7 +157,7 @@
     "        f = codecs.open(text, \"r\", \"sjis\")\n",
     "        sjis_text = f.read()\n",
     "        f.close()    \n",
-    "        sjis_text = processing_regular_expression(sjis_text)\n",
+    "        sjis_text = normalize_text(sjis_text)\n",
     "        all_sjis_text += sjis_text #テキストに保存\n",
     "        \n",
     "    # 整形結果確認   \n",
@@ -168,54 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "明治\n",
-      "申\n",
-      "五月\n",
-      "朔日\n",
-      "社友\n",
-      "早\n",
-      "矢\n",
-      "仕る\n",
-      "京都\n",
-      "いる\n",
-      "名所旧跡\n",
-      "訪う\n",
-      "暇\n",
-      "ある\n",
-      "博覧\n",
-      "見物\n",
-      "もと\n",
-      "輩\n",
-      "上京\n",
-      "趣意\n",
-      "ある\n",
-      "府下\n",
-      "学校\n",
-      "一覧\n",
-      "する\n",
-      "知る\n",
-      "人\n",
-      "案内\n",
-      "乞い\n",
-      "諸処\n",
-      "学校\n",
-      "行く\n",
-      "する\n",
-      "待遇\n",
-      "厚い\n",
-      "塾舎\n",
-      "講堂\n",
-      "残る\n",
-      "ない\n",
-      "見る\n",
-      "得る\n"
+      "15.308985615542687\n"
      ]
     }
    ],
@@ -238,43 +198,29 @@
     "    word_list = [extract_words(sentence)for sentence in sentence_list]\n",
     "    \n",
     "    # 単語リストの結果を一部表示\n",
-    "    for word in word_list[0]:\n",
-    "        print(word)\n"
+    "    for word in word_list:\n",
+    "        print(word) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
-      "Word2Vec(vocab=2897, size=100, alpha=0.025)\n",
       "Word2Vec(vocab=2897, size=100, alpha=0.025)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(349820, 491694)"
+       "(291211, 409745)"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,32 +230,30 @@
     "#適切なハイパーパラメータを決める\n",
     "\n",
     "import gensim\n",
-    "for i in range(1,16):\n",
-    "    model = gensim.models.Word2Vec(\n",
-    "        word_list, \n",
-    "        sg = 1,\n",
-    "        size = 100, # 次元\n",
-    "        window = i, #similar_words \n",
-    "        hs = 0,\n",
-    "        workers = 2,\n",
-    "        sorted_vocab=True\n",
-    "    )\n",
-    "    print(model)\n",
     "\n",
-    "model.train(word_list, total_examples=len(word_list), epochs=6)"
+    "model = gensim.models.Word2Vec(\n",
+    "    word_list, \n",
+    "    sg = 1, #skip-gram :on\n",
+    "    size = 100, # 次元\n",
+    "    window = 15, #similar_words \n",
+    "    hs = 0,\n",
+    ")\n",
+    "print(model)\n",
+    "\n",
+    "model.train(word_list, total_examples=len(word_list), epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "free word -->ai\n",
-      "aiは類似性がありません\n"
+      "free word -->a\n",
+      "aは類似性がありません\n"
      ]
     },
     {
@@ -352,57 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'index2word'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-285-b7718147895b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# word2vecの結果をt-SNEで次元圧縮\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mvocabulary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword2vec_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'index2word'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0memb_tuple\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword2vec_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvocabulary\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memb_tuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'index2word'"
-     ]
-    }
-   ],
-   "source": [
-    "# モデルの可視化\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.manifold import TSNE\n",
-    "import numpy as np\n",
-    "\n",
-    "word2vec_model = model\n",
-    "\n",
-    "# 取り出す単語の量を設定\n",
-    "skip = 0\n",
-    "limit = 50\n",
-    "\n",
-    "# word2vecの結果をt-SNEで次元圧縮\n",
-    "vocabulary = word2vec_model.__dict__['index2word']\n",
-    "emb_tuple = tuple([word2vec_model[v] for v in vocabulary])\n",
-    "x = np.vstack(emb_tuple)\n",
-    "\n",
-    "model = TSNE(n_compornents = 2, ramdom_state=0)\n",
-    "np.set_printoptions(suppress=True)\n",
-    "model.fit_transform(X)\n",
-    "\n",
-    "#matplotlibでt-SNEの図を描く\n",
-    "plt.figure(figsize=(40,40))\n",
-    "plt.scatter(model.embedding_[skip:limit, 0], model.embedding_[skip:limit, 1])\n",
-    "\n",
-    "count = 0\n",
-    "for label, x, y in zip(vocabulary, model.embedding_[:, 0], model.embedding_[:, 1]):\n",
-    "    \n",
-    "    count += 1\n",
-    "    if count < skip: continue\n",
-    "    plt.annotate(label, xy=(x, y), xytext=(0, 0), textcoords='offset points')\n",
-    "    if count == limit: break\n",
-    "plt.show()\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
